# sell-onteligencia

./: .env.example  .gitignore  README.md  alembic.ini  base_conhecimento_credenciamento_artistas_prefeituras_claude_code.md  base_conhecimento_prefeituras_contratacao_eventos_e_politicos.md  consulta_contratos_abertos.py  docker-compose.yml  pyproject.toml  requirements.txt
agents/: artista_agent.py  contrato_agent.py  evento_agent.py  opportunity_agent.py  prefeitura_agent.py  rodeio_agent.py
alembic/: env.py
analytics/: event_classifier.py  opportunity_engine.py  recomendador.py  scoring_artistas.py  scoring_oportunidades.py  scoring_prefeituras.py  simulador_rodeio.py
app/: config.py  database.py  main.py
dashboard/: streamlit_app.py
docs/: arquitetura.md  compliance_scraping.md  fontes_de_dados.md  modelo_de_dados.md  project-overview.md  roadmap.md
prompts/: artista_classification_prompt.md  contrato_extraction_prompt.md  evento_detection_prompt.md  opportunity_analysis_prompt.md
scripts/: _analyze_dg.py  _check_cg.py  _check_cg2.py  _check_cg_score.py  _check_data.py  _check_doe_muni.py  _check_relink.py  _check_scores.py  _fix_fundacao_estadual.py  build_artist_appearances.py  fix_contract_municipalities.py  relink_contracts.py  resolve_doe_municipalities.py  run_accreditation_crawler.py  run_artist_classifier.py  run_artist_extractor.py  run_contract_extractor.py  run_diario_crawler.py  run_diogrande_crawler.py  run_opportunity_engine.py  run_pncp_crawler.py  run_prefeitura_scanner.py  run_secretary_scanner.py  scrape_secretarios.py  seed_artistas.py  (+7 more)
(+58 files in other folders)
